--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!doctype html>
-<html lang="en">
+<html lang="cz-cs">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BootLabs</title>
     <link rel="stylesheet" href="styly.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">
+    <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.js"></script>
   </head>
-  <body>
+  <body class="main">
     <header>
-      <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid" style="font-family: normal;">
-          <a class="navbar-brand" href="#">
-            <img src="1570732-200.png" alt="Logo" width="40" height="34" class="d-inline-block align-text-top">
-            BootLabs
-          </a>
-          <form class="container">
-            <button class="button1" type="button">Domů</button>
-            <button class="button1" type="button">O nás</button>
-            <button class="button1" type="button">Kontakt</button>
-          </form>
+      <div id="first">
+        <img src="LOGO.png" alt="LOGO">
+        <div>
+          <h1>Boot</h1>
+          <h1 id="l">L</h1>
+          <h1>abs</h1>
         </div>
-      </nav>
+        
+      </div>
+      <div id="second">
+        <ul class="nav nav-pills nav-fill">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Domů</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">O nás</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Kontakt</a>
+          </li>
+        </ul>
+      </div>
     </header>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
