přidělané odkazy na Kontakty a o nas

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
             <a class="nav-link active" aria-current="page" href="#">Domů</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">O nás</a>
+            <a class="nav-link" href="Onas.html">O nás</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Kontakt</a>
