--- a/Onas.html
+++ b/Onas.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="home.html">Domů</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Onas.html">O nás</a>
+            <a class="nav-link active rounded-3" aria-current="page" href="Onas.html">O nás</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Kontakt.html">Kontakt</a>
