--- a/Kontakt.html
+++ b/Kontakt.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="Onas.html">O nás</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Kontakt.html">Kontakt</a>
+            <a class="nav-link active rounded-3" aria-current="page" href="Kontakt.html">Kontakt</a>
           </li>
         </ul>
       </div>
