--- a/home.html
+++ b/home.html
@@ -22,13 +22,13 @@
       <div id="second">
         <ul class="nav nav-pills nav-fill">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Domů</a>
+            <a class="nav-link active rounded-3" aria-current="page" href="#">Domů</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Onas.html">O nás</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Kontakt</a>
+            <a class="nav-link" href="Kontakt.html">Kontakt</a>
           </li>
         </ul>
       </div>
