--- a/Onas.html
+++ b/Onas.html
@@ -11,7 +11,7 @@
   <body class="main">
     <header>
       <div id="first">
-        <img src="LOGO.png" alt="LOGO">
+        <img src="LOGO 16.39.19.png" alt="LOGO">
         <div>
           <h1>Boot</h1>
           <h1 id="l">L</h1>
