--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
   <body class="main">
     <header>
       <div id="first">
-        <img src="LOGO.png" alt="LOGO">
+        <img src="LOGO 16.39.19.png" alt="LOGO">
         <div>
           <h1>Boot</h1>
           <h1 id="l">L</h1>
@@ -33,5 +33,70 @@
         </ul>
       </div>
     </header>
+    <div class="section1">
+        <div class="textmain">  
+            <h1>Aplikace a<br>bezpečnost na míru<br>pro vaši firmu</h1>
+        </div>
+        <div class="decor">
+          <img src="maindecor.png" alt="decor" style="height: 1300px; width: 700px;">
+        </div>
+    </div>
+    <div class="section2">
+      <div class="texty">
+        <div class="text1">
+          <div class="nadpis1">
+            <h1 id="char">></h1><h1>Webové aplikace</h1>
+          </div>
+          <div class="popis1">
+            <p>Náš tým na vývoj webových<br>apliakcí se stará o<br>poskytnutí nejlepších<br>
+              možných řešení<br>
+              pro vás</p>
+          </div>
+        </div>
+        <div class="text2">
+          <div class="nadpis2">
+            <h1 id="char">></h1><h1>Mobilní aplikace</h1>
+          </div>
+          <div class="popis2">
+            <p>Přinášíme na trh moderní<br>a uživatelsky příjemné mobilní<br>aplikace pro platformy Android a iOS</p>
+          </div>
+        </div>
+        <div class="text3">
+          <div class="nadpis3">
+            <h1 id="char">></h1><h1>Bezpečnostní řešení</h1>
+          </div>
+          <div class="popis3">
+            <p>Nabídneme vám nejlepší možné<br>řešení s ohledem na<br>aktualní bezpečnostní trendy a potřeby</p>
+          </div>
+        </div>
+      </div>
+      <div class="decor2">
+        <img src="maindecor2.png" alt="" style="width: 500px; height: 500px;">
+      </div>
+      <div class="decor3">
+        <img src="maindecor3.jpg" alt="" style="width: 500px; height: 500px;">
+      </div>
+    </div>
+    <footer>
+      <div class="kontakt">
+        <div class="nadpis">
+          <h2>Kontaktujte nás</h2>
+        </div>
+        <div class="info">
+          <p>info@bootlabs.cz<br>+420 776 515 343<br>Tomáš číslo<br>Sídlo firmy</p>
+        </div>
+      </div>
+      <div class="footerlogo">
+        <div class="logonapis">
+          <h1>Boot</h1>
+          <h1 id="l">L</h1>
+          <h1>abs</h1>
+        </div>
+        <div class="text">
+          <p>@ 2023 BootLabs s.r.o.</p>
+        </div>
+      </div>
+
+    </footer>
   </body>
 </html>
