--- a/Kontakt.html
+++ b/Kontakt.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.js"></script>
   </head>
-  <body class="main">
+  <body class="main-onas">
     <header>
       <div id="first">
         <img src="LOGO 16.39.19.png" alt="LOGO">
@@ -33,5 +33,44 @@
         </ul>
       </div>
     </header>
+    <div class="Onas">
+      <div class="nadpis">
+        <h1 id="char">></h1><h1>Kontaktujte nás</h1>
+      </div>
+      <div class="formular">
+        <div id="A">
+          <input type="text" placeholder="Jméno" >
+        </div>
+        <div id="B">
+          <input type="text" placeholder="Email" >
+        </div>
+        <div id="C">
+          <textarea placeholder="Zpráva"></textarea>
+        </div>
+        <div id="D">
+          <button> Odeslat</button>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="kontakt">
+        <div class="nadpis">
+          <h2>Kontaktujte nás</h2>
+        </div>
+        <div class="info">
+          <p>info@bootlabs.cz<br>+420 776 515 343<br>Tomáš číslo<br>Sídlo firmy</p>
+        </div>
+      </div>
+      <div class="footerlogo">
+        <div class="logonapis">
+          <h1>Boot</h1>
+          <h1 id="l">L</h1>
+          <h1>abs</h1>
+        </div>
+        <div class="text">
+          <p>@ 2023 BootLabs s.r.o.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
