--- a/Onas.html
+++ b/Onas.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BootLabs</title>
     <link rel="stylesheet" href="styly.css">
-    <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">
-    <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.js"></script>
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <script src="bootstrap.bundle.js"></script>
   </head>
   <body class="main-onas">
     <header>
@@ -22,7 +22,7 @@
       <div id="second">
         <ul class="nav nav-pills nav-fill">
           <li class="nav-item">
-            <a class="nav-link" href="home.html">Domů</a>
+            <a class="nav-link" href="index.html">Domů</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active rounded-3" aria-current="page" href="Onas.html">O nás</a>
@@ -33,6 +33,9 @@
         </ul>
       </div>
     </header>
+    <div class="onasdecor">
+      <img src="onasdecor.jpg" alt="decor">
+    </div>
     <div class="Onas">
       <div class="nadpis">
         <h1 id="char">></h1><h1>Kdo jsme</h1>
@@ -43,6 +46,10 @@
           přístupem ke každému projektu, jsme tu, abychom přinesli nový standard v oblasti vývoje mobilních a webových aplikací, stejně jako technologickou bezpečnost vaší firmě</p>
       </div>
     </div>
+    <div class="onasdecor2">
+      <img src="onasdecor2.jpg" alt="onasdecor2">
+    </div>
+    
     <footer>
       <div class="kontakt">
         <div class="nadpis">
