--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BootLabs</title>
     <link rel="stylesheet" href="styly.css">
-    <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">
-    <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.js"></script>
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <script src="bootstrap.bundle.js"></script>
   </head>
   <body class="main">
     <header>
@@ -17,7 +17,6 @@
           <h1 id="l">L</h1>
           <h1>abs</h1>
         </div>
-        
       </div>
       <div id="second">
         <ul class="nav nav-pills nav-fill">
@@ -70,6 +69,7 @@
           </div>
         </div>
       </div>
+    
       <div class="decor2">
         <img src="maindecor2.png" alt="" style="width: 500px; height: 500px;">
       </div>
