--- a/Kontakt.html
+++ b/Kontakt.html
@@ -11,7 +11,7 @@
   <body class="main-onas">
     <header>
       <div id="first">
-        <img src="LOGO 16.39.19.png" alt="LOGO">
+        <img src="Images/LOGO 16.39.19.png" alt="LOGO">
         <div>
           <h1>Boot</h1>
           <h1 id="l">L</h1>
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div class="kontaktdecor">
-      <img src="kontaktdecor.jpg" alt="kontaktdecor">
+      <img src="Images/kontaktdecor.jpg" alt="kontaktdecor">
     </div>
     <div class="kontakt1">
       <div class="nadpis">
@@ -59,7 +59,7 @@
       
     </div>
     <div class="kontaktdecor2">
-      <img src="kontaktdecor2.png" alt="kontaktdecor2">
+      <img src="Images/kontaktdecor2.png" alt="kontaktdecor2">
     </div>
     <footer>
       <div class="kontakt">
