--- a/Onas.html
+++ b/Onas.html
@@ -11,7 +11,7 @@
   <body class="main-onas">
     <header>
       <div id="first">
-        <img src="LOGO 16.39.19.png" alt="LOGO">
+        <img src="Images/LOGO 16.39.19.png" alt="LOGO">
         <div>
           <h1>Boot</h1>
           <h1 id="l">L</h1>
@@ -34,7 +34,7 @@
       </div>
     </header>
     <div class="onasdecor">
-      <img src="onasdecor.jpg" alt="decor">
+      <img src="Images/onasdecor.jpg" alt="decor">
     </div>
     <div class="Onas">
       <div class="nadpis">
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="onasdecor2">
-      <img src="onasdecor2.jpg" alt="onasdecor2">
+      <img src="Images/maindecor2.png" alt="onasdecor2">
     </div>
     
     <footer>
