--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="main">
     <header>
       <div id="first">
-        <img src="LOGO 16.39.19.png" alt="LOGO">
+        <img src="Images/LOGO 16.39.19.png" alt="LOGO">
         <div>
           <h1>Boot</h1>
           <h1 id="l">L</h1>
@@ -37,7 +37,7 @@
             <h1>Aplikace a<br>bezpečnost na míru<br>pro vaši firmu</h1>
         </div>
         <div class="decor">
-          <img src="maindecor.png" alt="decor" style="height: 1300px; width: 700px;">
+          <img src="/Images/maindecor.png" alt="decor" style="height: 1300px; width: 700px;">
         </div>
     </div>
     <div class="section2">
@@ -71,10 +71,10 @@
       </div>
     
       <div class="decor2">
-        <img src="maindecor2.png" alt="" style="width: 500px; height: 500px;">
+        <img src="Images/maindecor2.png" alt="" style="width: 500px; height: 500px;">
       </div>
       <div class="decor3">
-        <img src="maindecor3.jpg" alt="" style="width: 500px; height: 500px;">
+        <img src="/Images/maindecor3.jpg" alt="" style="width: 500px; height: 500px;">
       </div>
     </div>
     <footer>
