--- a/Kontakt.html
+++ b/Kontakt.html
@@ -40,22 +40,14 @@
       <div class="nadpis">
         <h1 id="char">></h1><h1>Kontaktujte nás</h1>
       </div>
-      <form action="mailto:info@bootlabs.cz">
-        <div class="formular">
-          <div id="A">
-            <input id="name" type="text" placeholder="Jméno" >
-          </div>
-          <div id="B">
-            <input id="mail" type="text" placeholder="Email" >
-          </div>
-          <div id="C">
-            <textarea id="msg" placeholder="Zpráva" id="body"></textarea>
-          </div>
-          <div id="D">
-            <button> Odeslat</button>
-          </div>
-        </div>
-      </form>
+      <div class="kontakt2">
+        <a href="mailto:info@bootlabs.cz"><div class="spolu"><p id="char">></p><p class="text">info@bootlabs.cz</p></div></a>
+        <a href="mailto:david.chabera@bootlabs.cz"><div class="spolu"><p id="char">></p><p class="text">david.chabera@bootlabs.cz</p></div></a>
+        <a href="mailto:tomas.bilek@bootlabs.cz"><div class="spolu"><p id="char">></p><p class="text">tomas.bilek@bootlabs.cz</p></div></a>
+        <div class="spolu"><p id="char">></p><p>+420 776 515 343</p></div>
+        <div class="spolu"><p id="char">></p><p>+420 607 645 444</p></div>
+        <div class="spolu"><p id="char">></p><p>Sídlo firmy</p></div>
+      </div>
       
     </div>
     <div class="kontaktdecor2">
@@ -67,7 +59,7 @@
           <h2>Kontaktujte nás</h2>
         </div>
         <div class="info">
-          <p>info@bootlabs.cz<br>+420 776 515 343<br>Tomáš číslo<br>Sídlo firmy</p>
+          <p>info@bootlabs.cz<br>+420 776 515 343<br>+420 607 645 444<br>Sídlo firmy</p>
         </div>
       </div>
       <div class="footerlogo">
