--- a/Onas.html
+++ b/Onas.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="onasdecor2">
-      <img src="Images/maindecor2.png" alt="onasdecor2">
+      <img src="Images/onasdecor2.jpg" alt="onasdecor2">
     </div>
     
     <footer>
@@ -56,7 +56,7 @@
           <h2>Kontaktujte nás</h2>
         </div>
         <div class="info">
-          <p>info@bootlabs.cz<br>+420 776 515 343<br>Tomáš číslo<br>Sídlo firmy</p>
+          <p>info@bootlabs.cz<br>+420 776 515 343<br>+420 607 645 444<br>Sídlo firmy</p>
         </div>
       </div>
       <div class="footerlogo">
