--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <h2>Kontaktujte nás</h2>
         </div>
         <div class="info">
-          <p>info@bootlabs.cz<br>+420 776 515 343<br>Tomáš číslo<br>Sídlo firmy</p>
+          <p>info@bootlabs.cz<br>+420 776 515 343<br>+420 607 645 444<br>Sídlo firmy</p>
         </div>
       </div>
       <div class="footerlogo">
