--- a/Kontakt.html
+++ b/Kontakt.html
@@ -44,9 +44,9 @@
         <a href="mailto:info@bootlabs.cz"><div class="spolu"><p id="char">></p><p class="text">info@bootlabs.cz</p></div></a>
         <a href="mailto:david.chabera@bootlabs.cz"><div class="spolu"><p id="char">></p><p class="text">david.chabera@bootlabs.cz</p></div></a>
         <a href="mailto:tomas.bilek@bootlabs.cz"><div class="spolu"><p id="char">></p><p class="text">tomas.bilek@bootlabs.cz</p></div></a>
-        <div class="spolu"><p id="char">></p><p>+420 776 515 343</p></div>
-        <div class="spolu"><p id="char">></p><p>+420 607 645 444</p></div>
-        <div class="spolu"><p id="char">></p><p>Sídlo firmy</p></div>
+        <div class="spolu"><p id="char1">></p><p>+420 776 515 343</p></div>
+        <div class="spolu"><p id="char1">></p><p>+420 607 645 444</p></div>
+        <div class="spolu"><p id="char1">></p><p>Sídlo firmy</p></div>
       </div>
       
     </div>
