--- a/Onas.html
+++ b/Onas.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BootLabs</title>
+    <meta name="description" content="Jsme inovativní firma zaměřující se na vývoj bezpečných mobilních aplikací a poskytování komplexních služeb v oblasti kyberbezpečnosti. Naše týmy expertů spojují špičkové technologické know-how s vášní pro ochranu digitálních prostorů. Nabízíme širokou škálu služeb, včetně vývoje bezpečných mobilních aplikací, penetračního testování, školení v oblasti kyberbezpečnosti a konzultací na míru pro vaše bezpečnostní potřeby. S námi máte jistotu, že vaše mobilní aplikace jsou bezpečné a chráněné před kybernetickými hrozbami. Spolehněte se na nás pro bezpečný digitální rozvoj vaší firmy.">
+    <meta name="title" content="BootLabs">
+    <meta name="keywords" content="mobilní aplikace, kyberbezpečnost, vývoj, bezpečnost, IT, technologie">
+    <meta property="og:image" content="/Images/LOGO 16.39.19.png">
+
+    <title>Bezpečná Aplikace na míru | BootLabs</title>
     <link rel="stylesheet" href="styly.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <script src="bootstrap.bundle.js"></script>
@@ -22,7 +27,7 @@
       <div id="second">
         <ul class="nav nav-pills nav-fill">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Domů</a>
+            <a class="nav-link" href="index.html">Domů</a>q
           </li>
           <li class="nav-item">
             <a class="nav-link active rounded-3" aria-current="page" href="Onas.html">O nás</a>
