--- a/Onas.html
+++ b/Onas.html
@@ -37,7 +37,16 @@
           </li>
         </ul>
       </div>
+      <div onclick="openNav()" id="second-mobile">
+        <img src="Images/menu.png" alt="menu">
+      </div>
     </header>
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="index.html">Domů</a>
+      <a class="active" href="Onas.html">O nás</a>
+      <a href="Kontakt.html">Kontakt</a>
+    </div>
     <div class="onasdecor">
       <img src="Images/onasdecor.jpg" alt="decor">
     </div>
@@ -75,5 +84,6 @@
         </div>
       </div>
     </footer>
+    <script src="dropdown.js"></script>
   </body>
 </html>
