--- a/Kontakt.html
+++ b/Kontakt.html
@@ -17,7 +17,6 @@
           <h1 id="l">L</h1>
           <h1>abs</h1>
         </div>
-        
       </div>
       <div id="second">
         <ul class="nav nav-pills nav-fill">
@@ -32,10 +31,22 @@
           </li>
         </ul>
       </div>
+      <div onclick="openNav()" id="second-mobile">
+        <img src="Images/menu.png" alt="menu">
+      </div>
     </header>
+
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="index.html">Domů</a>
+      <a href="Onas.html">O nás</a>
+      <a class="active" href="Kontakt.html">Kontakt</a>
+    </div>
+
     <div class="kontaktdecor">
       <img src="Images/kontaktdecor.jpg" alt="kontaktdecor">
     </div>
+
     <div class="kontakt1">
       <div class="nadpis">
         <h1 id="char">></h1><h1>Kontaktujte nás</h1>
@@ -73,5 +84,6 @@
         </div>
       </div>
     </footer>
+    <script src="dropdown.js"></script>
   </body>
 </html>
