domrdany/ale mobil gotovy

--- a/Onas.html
+++ b/Onas.html
@@ -14,20 +14,21 @@
     <script src="bootstrap.bundle.js"></script>
   </head>
   <body class="main-onas">
-    <header>
+    <header class="mobile-absolute">
       <div id="first">
-        <img src="Images/LOGO 16.39.19.png" alt="LOGO">
+        <div id="image">
+          <img src="Images/LOGO 16.39.19.png" alt="LOGO">
+        </div>
         <div>
           <h1>Boot</h1>
           <h1 id="l">L</h1>
           <h1>abs</h1>
         </div>
-        
       </div>
       <div id="second">
         <ul class="nav nav-pills nav-fill">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Domů</a>q
+            <a class="nav-link" href="index.html">Domů</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active rounded-3" aria-current="page" href="Onas.html">O nás</a>
@@ -52,7 +53,7 @@
     </div>
     <div class="Onas">
       <div class="nadpis">
-        <h1 id="char">></h1><h1>Kdo jsme</h1>
+        <h1 id="char">></h1><h1>Kd</h1><h1 id="blue" >o js</h1><h1>me?</h1>
       </div>
       <div class="text-onas">
         <p>Jsme nově založená společnost BootLabs, váš inovační partner v oblasti digitálního rozvoje. 
