--- a/Kontakt.html
+++ b/Kontakt.html
@@ -11,7 +11,9 @@
   <body class="main-onas">
     <header>
       <div id="first">
-        <img src="Images/LOGO 16.39.19.png" alt="LOGO">
+        <div id="image">
+          <img src="Images/LOGO 16.39.19.png" alt="LOGO">
+        </div>
         <div>
           <h1>Boot</h1>
           <h1 id="l">L</h1>
