--- a/Kontakt.html
+++ b/Kontakt.html
@@ -29,6 +29,9 @@
             <a class="nav-link" href="Onas.html">O nás</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="Sluzby.html">Služby</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active rounded-3" aria-current="page" href="Kontakt.html">Kontakt</a>
           </li>
         </ul>
@@ -42,6 +45,7 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Domů</a>
       <a href="Onas.html">O nás</a>
+      <a href="Sluzby.html">Služby</a>
       <a class="active" href="Kontakt.html">Kontakt</a>
     </div>
 
