--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <a class="nav-link" href="Onas.html">O nás</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="Sluzby.html">Služby</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="Kontakt.html">Kontakt</a>
           </li>
         </ul>
@@ -48,6 +51,7 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a class="active" href="index.html">Domů</a>
       <a href="Onas.html">O nás</a>
+      <a href="Sluzby.html">Služby</a>
       <a href="Kontakt.html">Kontakt</a>
     </div>
 
