--- a/Onas.html
+++ b/Onas.html
@@ -34,6 +34,9 @@
             <a class="nav-link active rounded-3" aria-current="page" href="Onas.html">O nás</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="Sluzby.html">Služby</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="Kontakt.html">Kontakt</a>
           </li>
         </ul>
@@ -46,6 +49,7 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="index.html">Domů</a>
       <a class="active" href="Onas.html">O nás</a>
+      <a href="Sluzby.html">Služby</a>
       <a href="Kontakt.html">Kontakt</a>
     </div>
     <div class="onasdecor">
