--- a/Kontakt.html
+++ b/Kontakt.html
@@ -9,7 +9,7 @@
     <script src="bootstrap.bundle.js"></script>
   </head>
   <body class="main-onas">
-    <header>
+    <header class="mobile-absolute">
       <div id="first">
         <div id="image">
           <img src="Images/LOGO 16.39.19.png" alt="LOGO">
