--- a/Kontakt.html
+++ b/Kontakt.html
@@ -40,13 +40,14 @@
         <img src="Images/menu.png" alt="menu">
       </div>
     </header>
-
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="index.html">Domů</a>
-      <a href="Onas.html">O nás</a>
-      <a href="Sluzby.html">Služby</a>
-      <a class="active" href="Kontakt.html">Kontakt</a>
+    <div class="mobile">
+      <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html">Domů</a>
+        <a href="Onas.html">O nás</a>
+        <a href="Sluzby.html">Služby</a>
+        <a class="active" href="Kontakt.html">Kontakt</a>
+      </div>
     </div>
 
     <div class="kontaktdecor">
