--- a/Onas.html
+++ b/Onas.html
@@ -45,12 +45,14 @@
         <img src="Images/menu.png" alt="menu">
       </div>
     </header>
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="index.html">Domů</a>
-      <a class="active" href="Onas.html">O nás</a>
-      <a href="Sluzby.html">Služby</a>
-      <a href="Kontakt.html">Kontakt</a>
+    <div class="mobile">
+      <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html">Domů</a>
+        <a class="active" href="Onas.html">O nás</a>
+        <a href="Sluzby.html">Služby</a>
+        <a href="Kontakt.html">Kontakt</a>
+      </div>
     </div>
     <div class="onasdecor">
       <img src="Images/onasdecor.jpg" alt="decor">
@@ -61,8 +63,8 @@
       </div>
       <div class="text-onas">
         <p>Jsme nově založená společnost BootLabs, váš inovační partner v oblasti digitálního rozvoje. 
-          S vášní pro technologii a kreativním 
-          přístupem ke každému projektu, jsme tu, abychom přinesli nový standard v oblasti vývoje mobilních a webových aplikací, stejně jako technologickou bezpečnost vaší firmě</p>
+            S vášní pro technologii a kreativním 
+            přístupem ke každému projektu, jsme tu, abychom přinesli nový standard v oblasti vývoje mobilních a webových aplikací, stejně jako technologickou bezpečnost vaší firmě</p>
       </div>
     </div>
     <div class="onasdecor2">
