--- a/Sluzby.html
+++ b/Sluzby.html
@@ -39,12 +39,14 @@
           <img src="Images/menu.png" alt="menu">
         </div>
       </header>
-      <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index.html">Domů</a>
-        <a href="Onas.html">O nás</a>
-        <a class="active" href="Sluzby.html">Služby</a>
-        <a href="Kontakt.html">Kontakt</a>
+      <div class="mobile">
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <a href="index.html">Domů</a>
+          <a href="Onas.html">O nás</a>
+          <a class="active" href="Sluzby.html">Služby</a>
+          <a href="Kontakt.html">Kontakt</a>
+        </div>
       </div>
       <div class="sluzbydecor">
         <img src="Images/sluzbydecor.jpg" alt="sluzbydecor">
