--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
         <img src="Images/menu.png" alt="menu">
       </div>
     </header>
-
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a class="active" href="index.html">Domů</a>
-      <a href="Onas.html">O nás</a>
-      <a href="Sluzby.html">Služby</a>
-      <a href="Kontakt.html">Kontakt</a>
+    <div class="mobile">
+      <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a class="active" href="index.html">Domů</a>
+        <a href="Onas.html">O nás</a>
+        <a href="Sluzby.html">Služby</a>
+        <a href="Kontakt.html">Kontakt</a>
+      </div>
     </div>
-
     <div class="section1">
         <div class="textmain">  
             <h1>Aplikace a <br class="desktop">bezpečnost <br class="mobile">na míru<br> pro vaši firmu</h1>
