--- a/Sluzby.html
+++ b/Sluzby.html
@@ -11,7 +11,9 @@
 <body class="main-onas">
     <header>
         <div id="first">
-          <img src="Images/LOGO 16.39.19.png" alt="LOGO">
+          <div id="image">
+            <img src="Images/LOGO 16.39.19.png" alt="LOGO">
+          </div>
           <div>
             <h1>Boot</h1>
             <h1 id="l">L</h1>
@@ -55,7 +57,7 @@
           <div class="item">
             <div class="Sluzby-text">
                   <div class="nadpis">
-                      <h1 id="char">></h1><h1>Aplikace na míru</h1>
+                      <h1 id="char">></h1><h1>Aplik</h1><h1 id="blue">ace n</h1><h1>a míru</h1>
                   </div>
                   <div class="text-onas">
                       <p>Hledáte spolehlivý tým pro vývoj vaší vlastní mobilní aplikace na míru? 
@@ -90,15 +92,12 @@
                     </div>
                 </div>
             </div>
-
-            
-
           </div>
 
           <div class="item">
             <div class="Sluzby-text">
                   <div class="nadpis">
-                      <h1 id="char">></h1><h1>Web na míru</h1>
+                      <h1 id="char">></h1><h1>We</h1><h1 id="blue">b na m</h1><h1> íru</h1>
                   </div>
                   <div class="text-onas">
                       <p>Naše služba vývoje webových aplikací nabízí špičkové řešení pro vaše digitální potřeby. 
@@ -124,10 +123,10 @@
             </div>
           </div>
           
-          <div class="item">
+          <div class="item" id="mobile-item-last">
             <div class="Sluzby-text">
                   <div class="nadpis">
-                      <h1 id="char">></h1><h1>Bezpečnostní řešení</h1>
+                      <h1 id="char">></h1><h1>Bezpeč</h1><h1 id="blue">nostn</h1><h1>í řešení</h1>
                   </div>
                   <div class="text-onas">
                       <p>V oblasti bezpečnosti je klíčové držet krok s neustále se měnícími trendy a předpisy. 
