--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h1 id="char">></h1><h1>Webo<h1 id="blue">vé ap</h1><h1>likace</h1>
           </div>
           <div class="popis1" id="mobile-popis">
-            <p>Náš tým na vývoj webových<br class="desktop">apliakcí se stará o<br class="desktop">poskytnutí nejlepších<br class="desktop">
+            <p>Náš tým na vývoj webových <br class="desktop">aplikací se stará o <br class="desktop">poskytnutí nejlepších <br class="desktop">
               možných řešení<br class="desktop">
               pro vás</p>
           </div>
@@ -80,7 +80,7 @@
             <h1 id="char">></h1><h1>Mobil<h1 id="blue">ní ap</h1><h1>likace</h1>
           </div>
           <div class="popis2" id="mobile-popis">
-            <p>Přinášíme na trh moderní<br class="desktop">a uživatelsky příjemné mobilní<br class="desktop">aplikace pro platformy Android a iOS</p>
+            <p>Přinášíme na trh moderní <br class="desktop">a uživatelsky příjemné mobilní <br class="desktop">aplikace pro platformy Android a iOS</p>
           </div>
         </div>
         <div class="text3" id="mobile-text">
@@ -88,7 +88,7 @@
             <h1 id="char">></h1><h1>Bezpeč<h1 id="blue">nost</h1><h1>ní řešení</h1>
           </div>
           <div class="popis3" id="mobile-popis">
-            <p>Nabídneme vám nejlepší možné<br class="desktop">řešení s ohledem na<br class="desktop">aktualní bezpečnostní trendy a potřeby</p>
+            <p>Nabídneme vám nejlepší možné <br class="desktop">řešení s ohledem na <br class="desktop">aktualní bezpečnostní trendy a potřeby</p>
           </div>
         </div>
       </div>
