--- a/Onas.html
+++ b/Onas.html
@@ -7,6 +7,7 @@
     <meta name="title" content="BootLabs">
     <meta name="keywords" content="mobilní aplikace, kyberbezpečnost, vývoj, bezpečnost, IT, technologie">
     <meta property="og:image" content="/Images/LOGO 16.39.19.png">
+    <link rel="icon" type="image/png" href="Images/title-logo.png"/>
 
     <title>Bezpečná Aplikace na míru | BootLabs</title>
     <link rel="stylesheet" href="styly.css">
