--- a/Sluzby.html
+++ b/Sluzby.html
@@ -6,6 +6,7 @@
     <title>Bezpečná Aplikace na míru | BootLabs</title>
     <link rel="stylesheet" href="styly.css">
     <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="icon" type="image/png" href="Images/title-logo.png"/>
     <script src="bootstrap.bundle.js"></script>
 </head>
 <body class="main-onas">
