--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Jsme inovativní firma zaměřující se na vývoj bezpečných mobilních aplikací a poskytování komplexních služeb v oblasti kyberbezpečnosti. Naše týmy expertů spojují špičkové technologické know-how s vášní pro ochranu digitálních prostorů. Nabízíme širokou škálu služeb, včetně vývoje bezpečných mobilních aplikací, penetračního testování, školení v oblasti kyberbezpečnosti a konzultací na míru pro vaše bezpečnostní potřeby. S námi máte jistotu, že vaše mobilní aplikace jsou bezpečné a chráněné před kybernetickými hrozbami. Spolehněte se na nás pro bezpečný digitální rozvoj vaší firmy.">
     <meta name="title" content="BootLabs">
     <meta name="keywords" content="mobilní aplikace, kyberbezpečnost, vývoj, bezpečnost, IT, technologie">
+    <link rel="icon" type="image/png" href="Images/title-logo.png"/>
 
     <title>Bezpečná Aplikace na míru | BootLabs</title>
 
