--- a/Kontakt.html
+++ b/Kontakt.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Kontaktujte nás pro konzultace a služby v oblasti kyberbezpečnosti. Jsme inovativní firma zaměřující se na vývoj bezpečných mobilních aplikací a poskytování komplexních služeb v oblasti kyberbezpečnosti. S námi máte jistotu, že vaše mobilní aplikace jsou bezpečné a chráněné před kybernetickými hrozbami. Spolehněte se na nás pro bezpečný digitální rozvoj vaší firmy.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="BootLabs">
+    <meta name="keywords" content="mobilní aplikace, kyberbezpečnost, vývoj, bezpečnost, IT, technologie, kontakt">
+    <meta name="title" content="BootLabs">
+    <title>Kontakt | BootLabs</title>
     <link rel="icon" type="image/png" href="Images/title-logo.png"/>
-    <title>Bezpečná Aplikace na míru | BootLabs</title>
     <link rel="stylesheet" href="styly.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <script src="bootstrap.bundle.js"></script>
