--- a/Sluzby.html
+++ b/Sluzby.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bezpečná Aplikace na míru | BootLabs</title>
+    <meta name="keywords" content="mobilní aplikace, kyberbezpečnost, vývoj, bezpečnost, IT, technologie, Služby">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Jsme inovativní firma zaměřující se na vývoj bezpečných mobilních aplikací a poskytování komplexních služeb v oblasti kyberbezpečnosti. Kontaktujte nás pro konzultace a služby v oblasti kyberbezpečnosti. S námi máte jistotu, že vaše mobilní aplikace jsou bezpečné a chráněné před kybernetickými hrozbami. Spolehněte se na nás pro bezpečný digitální rozvoj vaší firmy.">
+    <meta name="author" content="BootLabs">
+    <meta name="title" content="BootLabs">
+    <title>Naše Služby | BootLabs</title>
     <link rel="stylesheet" href="styly.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="icon" type="image/png" href="Images/title-logo.png"/>
