--- a/Kontakt.html
+++ b/Kontakt.html
@@ -62,7 +62,7 @@
 
     <div class="kontakt1">
       <div class="nadpis">
-        <h1 id="char">></h1><h1>Kontaktujte nás</h1>
+        <h1 id="char">></h1><h1>Konta</h1><h1 id="blue">ktuj</h1><h1>te nás</h1>
       </div>
       <div class="kontakt2">
         <a href="mailto:info@bootlabs.cz"><div class="spolu"><p id="char">></p><p class="text">info@bootlabs.cz</p></div></a>
