--- a/Onas.html
+++ b/Onas.html
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="onasdecor">
-      <img src="Images/onasdecor.jpg" alt="decor">
+      <img src="Images/onasdecor.jpg" alt="onasdecor2">
     </div>
     <div class="Onas">
       <div class="nadpis">
