--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="section1">
         <div class="textmain">  
-            <h1>Aplikace a <br class="desktop">bezpečnost <br class="mobile">na míru<br> pro vaši firmu</h1>
+            <h1>Aplikace a <br class="desktop">bezpečnost na míru<br> pro vaši firmu</h1>
         </div>
         <div class="decor">
           <img src="/Images/maindecor.png" alt="decor" style="height: 1300px; width: 700px;">
