--- a/Sluzby.html
+++ b/Sluzby.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" href="Images/title-logo.png"/>
     <script src="bootstrap.bundle.js"></script>
 </head>
-<body class="main-onas">
+<body class="main">
     <header>
         <div id="first">
           <div id="image">
