--- a/Kontakt.html
+++ b/Kontakt.html
@@ -8,6 +8,8 @@
     <meta name="author" content="BootLabs">
     <meta name="keywords" content="mobilní aplikace, kyberbezpečnost, vývoj, bezpečnost, IT, technologie, kontakt">
     <meta name="title" content="BootLabs">
+    <meta property="og:image" content="Images/title-logo">
+    <meta property="og:title" content="Kontakt | BootLabs">
     <title>Kontakt | BootLabs</title>
     <link rel="icon" type="image/png" href="Images/title-logo.png"/>
     <link rel="stylesheet" href="styly.css">
