--- a/Sluzby.html
+++ b/Sluzby.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Jsme inovativní firma zaměřující se na vývoj bezpečných mobilních aplikací a poskytování komplexních služeb v oblasti kyberbezpečnosti. Kontaktujte nás pro konzultace a služby v oblasti kyberbezpečnosti. S námi máte jistotu, že vaše mobilní aplikace jsou bezpečné a chráněné před kybernetickými hrozbami. Spolehněte se na nás pro bezpečný digitální rozvoj vaší firmy.">
     <meta name="author" content="BootLabs">
     <meta name="title" content="BootLabs">
+    <meta property="og:image" content="Images/title-logo">
+    <meta property="og:title" content="Naše Služby | BootLabs">
     <title>Naše Služby | BootLabs</title>
     <link rel="stylesheet" href="styly.css">
     <link rel="stylesheet" href="bootstrap.min.css">
