--- a/Onas.html
+++ b/Onas.html
@@ -8,6 +8,8 @@
     <meta name="author" content="BootLabs">
     <meta name="keywords" content="mobilní aplikace, kyberbezpečnost, vývoj, bezpečnost, IT, technologie">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="Images/title-logo">
+    <meta property="og:title" content="O Nás | BootLabs">
     <title>O Nás | BootLabs</title>
     <link rel="icon" type="image/png" href="Images/title-logo.png"/>
     <link rel="stylesheet" href="styly.css">
