--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="BootLabs">
     <meta property="og:title" content="Bezpečná Aplikace na míru | BootLabs">
-    <meta property="og:image" content="Images/title-logo">
+    <meta property="og:image" content="Images/title-logo.png">
     <link rel="icon" type="image/png" href="Images/title-logo.png"/>
     <title>Bezpečná Aplikace na míru | BootLabs</title>
     <link rel="stylesheet" href="styly.css">
