--- a/Onas.html
+++ b/Onas.html
@@ -31,7 +31,7 @@
       <div id="second">
         <ul class="nav nav-pills nav-fill">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Domů</a>
+            <a class="nav-link" href="Domov.html">Domů</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active rounded-3" aria-current="page" href="Onas.html">O nás</a>
@@ -51,7 +51,7 @@
     <div class="mobile">
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index.html">Domů</a>
+        <a href="Domov.html">Domů</a>
         <a class="active" href="Onas.html">O nás</a>
         <a href="Sluzby.html">Služby</a>
         <a href="Kontakt.html">Kontakt</a>
