--- a/Sluzby.html
+++ b/Sluzby.html
@@ -32,7 +32,7 @@
         <div id="second">
           <ul class="nav nav-pills nav-fill">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Domů</a>
+              <a class="nav-link" href="Domov.html">Domů</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Onas.html">O nás</a>
@@ -52,7 +52,7 @@
       <div class="mobile">
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-          <a href="index.html">Domů</a>
+          <a href="Domov.html">Domů</a>
           <a href="Onas.html">O nás</a>
           <a class="active" href="Sluzby.html">Služby</a>
           <a href="Kontakt.html">Kontakt</a>
