--- a/Domov.html
+++ b/Domov.html
@@ -10,11 +10,21 @@
     <meta name="author" content="BootLabs">
     <meta property="og:title" content="Bezpečná Aplikace na míru | BootLabs">
     <meta property="og:image" content="Images/title-logo.png">
-    <link rel="icon" type="image/png" href="Images/title-logo.png"/>
+    <link rel="icon" type="image/png" href="Images/faviconik.png"/>
     <title>Bezpečná Aplikace na míru | BootLabs</title>
     <link rel="stylesheet" href="styly.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <script src="bootstrap.bundle.js"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "BootLabs",
+        "url": "https://bootlabs.cz",
+        "logo": "https://bootlabs.cz/Images/faviconik.png",
+        "image": "https://bootlabs.cz/Images/faviconik.png"
+      }
+      </script>
   </head>
   <body class="main">
     <header>
