--- a/Kontakt.html
+++ b/Kontakt.html
@@ -8,7 +8,7 @@
     <meta name="author" content="BootLabs">
     <meta name="keywords" content="mobilní aplikace, kyberbezpečnost, vývoj, bezpečnost, IT, technologie, kontakt">
     <meta name="title" content="BootLabs">
-    <meta property="og:image" content="Images/title-logo.png">
+    <meta property="og:image" content="Images/faviconik.png">
     <meta property="og:title" content="Kontakt | BootLabs">
     <title>Kontakt | BootLabs</title>
     <link rel="icon" type="image/png" href="Images/title-logo.png"/>
