--- a/Onas-stary.html
+++ b/Onas-stary.html
@@ -5,29 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Jsme inovativní firma zaměřující se na vývoj bezpečných mobilních aplikací a poskytování komplexních služeb v oblasti kyberbezpečnosti. Naše týmy expertů spojují špičkové technologické know-how s vášní pro ochranu digitálních prostorů. Nabízíme širokou škálu služeb, včetně vývoje bezpečných mobilních aplikací, penetračního testování, školení v oblasti kyberbezpečnosti a konzultací na míru pro vaše bezpečnostní potřeby. S námi máte jistotu, že vaše mobilní aplikace jsou bezpečné a chráněné před kybernetickými hrozbami. Spolehněte se na nás pro bezpečný digitální rozvoj vaší firmy.">
     <meta name="title" content="BootLabs">
+    <meta name="author" content="BootLabs">
     <meta name="keywords" content="mobilní aplikace, kyberbezpečnost, vývoj, bezpečnost, IT, technologie">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="BootLabs">
-    <meta property="og:title" content="Bezpečná Aplikace na míru | BootLabs">
     <meta property="og:image" content="Images/title-logo.png">
+    <meta property="og:title" content="O Nás | BootLabs">
+    <title>O Nás | BootLabs</title>
     <link rel="icon" type="image/png" href="Images/faviconik.png"/>
-    <title>Bezpečná Aplikace na míru | BootLabs</title>
     <link rel="stylesheet" href="styly.css">
     <link rel="stylesheet" href="bootstrap.min.css">
-    <script src="bootstrap.bundle.js"></script>
-    <script type="application/ld+json">
-      {
-        "@context": "http://schema.org",
-        "@type": "Organization",
-        "name": "BootLabs",
-        "url": "https://bootlabs.cz",
-        "logo": "https://bootlabs.cz/Images/faviconik.png",
-        "image": "https://bootlabs.cz/Images/faviconik.png"
-      }
-      </script>
+    <script src="bootstrap.bundle.js"></script> 
   </head>
-  <body class="main">
-    <header>
+  <body class="main-onas">
+    <header class="mobile-absolute">
       <div id="first">
         <div id="image">
           <img src="Images/LOGO 16.39.19.png" alt="LOGO">
@@ -41,10 +31,10 @@
       <div id="second">
         <ul class="nav nav-pills nav-fill">
           <li class="nav-item">
-            <a class="nav-link active rounded-3" aria-current="page" href="Domov.html">Domů</a>
+            <a class="nav-link" href="Domov.html">Domů</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Onas.html">O nás</a>
+            <a class="nav-link active rounded-3" aria-current="page" href="Onas.html">O nás</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Sluzby.html">Služby</a>
@@ -61,53 +51,29 @@
     <div class="mobile">
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a class="active" href="Domov.html">Domů</a>
-        <a href="Onas.html">O nás</a>
+        <a href="Domov.html">Domů</a>
+        <a class="active" href="Onas.html">O nás</a>
         <a href="Sluzby.html">Služby</a>
         <a href="Kontakt.html">Kontakt</a>
       </div>
     </div>
-    <div class="section1">
-        <div class="textmain">  
-            <h1>Aplikace a <br class="desktop">bezpečnost na míru<br> pro vaši firmu</h1>
-        </div>
-        <div class="decor">
-          <img src="/Images/maindecor.png" alt="decor" style="height: 1300px; width: 700px;">
-        </div>
+    <div class="onasdecor">
+      <img src="Images/onasdecor.jpg" alt="onasdecor2">
     </div>
-    <div class="section2">
-      <div class="texty">
-        <div class="text1" id="mobile-text">
-          <div class="nadpis1" id="mobile-nadpis">
-            <h1 id="char">></h1><h1>Webo<h1 id="blue">vé ap</h1><h1>likace</h1>
-          </div>
-          <div class="popis1" id="mobile-popis">
-            <p>Náš tým na vývoj webových aplikací se stará o poskytnutí nejlepších možných řešení pro vás</p>
-          </div>
-        </div>
-        <div class="text2" id="mobile-text">
-          <div class="nadpis2" id="mobile-nadpis">
-            <h1 id="char">></h1><h1>Mobil<h1 id="blue">ní ap</h1><h1>likace</h1>
-          </div>
-          <div class="popis2" id="mobile-popis">
-            <p>Přinášíme na trh moderní a uživatelsky příjemné mobilní aplikace pro platformy Android a iOS</p>
-          </div>
-        </div>
-        <div class="text3" id="mobile-text">
-          <div class="nadpis3" id="mobile-nadpis">
-            <h1 id="char">></h1><h1>Bezpeč<h1 id="blue">nost</h1><h1>ní řešení</h1>
-          </div>
-          <div class="popis3" id="mobile-popis">
-            <p>Nabídneme vám nejlepší možné řešení s ohledem na aktualní bezpečnostní trendy a potřeby</p>
-          </div>
-        </div>
+    <div class="Onas">
+      <div class="nadpis">
+        <h1 id="char">></h1><h1>Kd</h1><h1 id="blue" >o js</h1><h1>me?</h1>
       </div>
+      <div class="text-onas">
+        <p>Jsme nově založená společnost BootLabs, váš inovační partner v oblasti digitálního rozvoje. 
+            S vášní pro technologii a kreativním 
+            přístupem ke každému projektu, jsme tu, abychom přinesli nový standard v oblasti vývoje mobilních a webových aplikací, stejně jako technologickou bezpečnost vaší firmě</p>
+      </div>
+    </div>
+    <div class="onasdecor2">
+      <img src="Images/onasdecor2.jpg" alt="onasdecor2">
+    </div>
     
-      
-      <div class="decor3">
-        <img src="/Images/maindecor3.jpg" alt="" style="width: 500px; height: 500px;">
-      </div>
-    </div>
     <footer>
       <div class="kontakt">
         <div class="nadpis">
@@ -119,9 +85,9 @@
       </div>
       <div class="footerlogo">
         <div class="logonapis">
-          <h1 class="mobile-footer">Boot</h1>
-          <h1 class="mobile-footer" id="l">L</h1>
-          <h1 class="mobile-footer" >abs</h1>
+          <h1>Boot</h1>
+          <h1 id="l">L</h1>
+          <h1>abs</h1>
         </div>
         <div class="text">
           <p>@ 2023 BootLabs s.r.o.</p>
