--- a/Kontakt.html
+++ b/Kontakt.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="Images/faviconik.png">
     <meta property="og:title" content="Kontakt | BootLabs">
     <title>Kontakt | BootLabs</title>
-    <link rel="icon" type="image/png" href="Images/title-logo.png"/>
+    <link rel="icon" type="image/png" href="Images/faviconik.png"/>
     <link rel="stylesheet" href="styly.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <script src="bootstrap.bundle.js"></script>
