--- a/Sluzby.html
+++ b/Sluzby.html
@@ -13,7 +13,7 @@
     <title>Naše Služby | BootLabs</title>
     <link rel="stylesheet" href="styly.css">
     <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="icon" type="image/png" href="Images/title-logo.png"/>
+    <link rel="icon" type="image/png" href="Images/faviconik.png"/>
     <script src="bootstrap.bundle.js"></script>
 </head>
 <body class="main">
