--- a/Domov.html
+++ b/Domov.html
@@ -30,7 +30,7 @@
     <header>
       <div id="first">
         <div id="image">
-          <img src="Images/LOGO 16.39.19.png" alt="LOGO">
+          <a href="Domov.html"><img src="Images/LOGO 16.39.19.png" alt="LOGO"></a>
         </div>
         <div>
           <h1>Boot</h1>
@@ -69,7 +69,7 @@
     </div>
     <div class="section1">
         <div class="textmain">  
-            <h1>Aplikace a <br class="desktop">bezpečnost na míru<br> pro vaši firmu</h1>
+            <h1 id="demo"></h1>
         </div>
         <div class="decor">
           <img src="/Images/maindecor.png" alt="decor" style="height: 1300px; width: 700px;">
