--- a/Sluzby.html
+++ b/Sluzby.html
@@ -20,7 +20,7 @@
     <header>
         <div id="first">
           <div id="image">
-            <img src="Images/LOGO 16.39.19.png" alt="LOGO">
+            <a href="Domov.html"><img src="Images/LOGO 16.39.19.png" alt="LOGO"></a>
           </div>
           <div>
             <h1>Boot</h1>
