--- a/Domov.html
+++ b/Domov.html
@@ -32,11 +32,13 @@
         <div id="image">
           <a href="Domov.html"><img src="Images/LOGO 16.39.19.png" alt="LOGO"></a>
         </div>
-        <div>
-          <h1>Boot</h1>
-          <h1 id="l">L</h1>
-          <h1>abs</h1>
-        </div>
+        <a id="nazev" href="Domov.html">
+          <div>
+            <h1>Boot</h1>
+            <h1 id="l">L</h1>
+            <h1>abs</h1>
+          </div>
+         </a>
       </div>
       <div id="second">
         <ul class="nav nav-pills nav-fill">
@@ -69,7 +71,7 @@
     </div>
     <div class="section1">
         <div class="textmain">  
-            <h1 id="demo"></h1>
+            <h1 id="demo" class="desktop"></h1>
         </div>
         <div class="decor">
           <img src="/Images/maindecor.png" alt="decor" style="height: 1300px; width: 700px;">
