--- a/Kontakt.html
+++ b/Kontakt.html
@@ -22,11 +22,13 @@
         <div id="image">
           <a href="Domov.html"><img src="Images/LOGO 16.39.19.png" alt="LOGO"></a>
         </div>
+       <a id="nazev" href="Domov.html">
         <div>
           <h1>Boot</h1>
           <h1 id="l">L</h1>
           <h1>abs</h1>
         </div>
+       </a>
       </div>
       <div id="second">
         <ul class="nav nav-pills nav-fill">
