--- a/Domov.html
+++ b/Domov.html
@@ -71,7 +71,7 @@
     </div>
     <div class="section1">
         <div class="textmain">  
-            <h1 id="demo" class="desktop"></h1>
+            <h1 id="demo"></h1>
         </div>
         <div class="decor">
           <img src="/Images/maindecor.png" alt="decor" style="height: 1300px; width: 700px;">
